feat: user retrieving via jwt
